apps/python-api-1/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-python-api-1
  labels:
    istio.io/dataplane-mode: ambient
    tier: application
